syntax="proto3";

option java_multiple_files=true;
option java_package="in.rk.bank.models";

package models;

message BalanceDepositRequest
{
  int32 account_number=1;
  int32 amount=2;
}