syntax="proto3";

option java_multiple_files=true;
option java_package="in.rk.bank.models";

package models;

message TransferRequest
{
  int32 from_account=1;
  int32 to_account=2;
  int32 amount=3;
}
